# lets

./: .gitignore  .prettierignore  README.md  dbeaver.properties  gradle.properties  license.header.txt  package.json  pnpm-lock.yaml  settings.gradle
buildSrc/: build.gradle  settings.gradle
gradle/: libs.versions.toml
groovy-app-example/: build.gradle
java-app-example/: build.gradle
java-lib-example/: build.gradle
kotlin-app-example/: build.gradle
lets-ai/: build.gradle
lets-antlr4/: build.gradle
lets-core/: build.gradle
lets-javaparser/: bnd.bnd  build.gradle
lets-jna/: build.gradle
lets-jni/: build.gradle
lets-lang/: build.gradle
lets-nestjs/: README.md  package.json  pnpm-lock.yaml
lets-net/: build.gradle
lets-prisma/: package.json  pnpm-lock.yaml
lets-refine/: README.MD  index.html  package.json  pnpm-lock.yaml
lets-refine/src/: App.tsx
lets-rust/: Cargo.toml  README.md
lets-rust/lets/: Cargo.toml
lets-rust/letscli/: Cargo.toml
lets-swt/: build.gradle
lets-tauri/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
lets-tauri/src/: App.tsx
lets-tauri/src-tauri/: Cargo.toml  tauri.conf.json
lets-turbo/: package.json  pnpm-lock.yaml
lets-typeorm/: README.md  package.json  pnpm-lock.yaml
lets-typeorm/src/: index.ts
lets-vuejs/: README.md  eslint.config.js  package.json  pnpm-lock.yaml
lets-webview/: build.gradle
letsc/: cute.h  letsc_test.c  meson.build
letsts/: .editorconfig  README.md  package.json  pnpm-lock.yaml
workspaces/lets-turbo/: package.json
(+2342 files in other folders)
